--- a/1-10-23/moreAwesomePage.html
+++ b/1-10-23/moreAwesomePage.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best home page on the planet</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is definiatly the better page</h1>
+    <h1>This is definitely the better page</h1>
     <p>:)</p>
     <p>I'm glad to be learning this</p>
     <hr>What does this do?</hr>
