Edited main index.html

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home Page</title>
 </head>
 <body>
-    <h1>Real home page</h1>
+    <h1>Kaitlyn Myers' Home Page</h1>
+    <a href=http://127.0.0.1:5500/1-10-23/index.html>Go to First Webpage</a>
+    <br> <br>
+    <a href=http://127.0.0.1:5500/wwr/site-plan-rafting.html>Go to Rafting Site Plan</a>
 </body>
 </html>
