--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -36,7 +36,8 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="./images/LIVE-LAUGH-RAFT.png" alt="Logo image" />
+    <img src="https://kaitlyn-myers8208.github.io/Code/wwr/image/Live-Laugh-Raft.png
+    " alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
