first webpage edits

--- a/1-10-23/index.html
+++ b/1-10-23/index.html
@@ -11,8 +11,10 @@
     <h1> I love web development</h1>
     <p>This is so fun :)</p>
     <p>I'm glad to be learning this</p>
+    <img width="500" src="./Family Pictures - Sibling Pic.jpg" alt="">
+    <br>
     <hr>What does this do?</hr>
-    <img src="./Family Pictures - Sibling Pic.jpg" alt="">
+    <br><br>
     <a href="./moreAwesomePage.html">Go to the better page</a>
 </body>
 </html>
