--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Live, Laugh, Raft Logo">
+            <img class="logo" src="https://kaitlyn-myers8208.github.io/Code/wwr/images/Live-Laugh-Raft.png" alt="Live, Laugh, Raft Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
