--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Kaitlyn Myers' Home Page</h1>
     <a href=http://127.0.0.1:5500/1-10-23/index.html>Go to First Webpage</a>
     <br> <br>
+    <a href="./wwr/index.html">Go to Rafting Home Page</a>
+    <br> <br>
     <a href="./wwr/site-plan-rafting.html">Go to Rafting Site Plan</a>
     <br> <br>
     <a href="./1-19-23/index.html">Go to HTML Practice</a>
