personal site content

--- a/theaterreview/site-plan.html
+++ b/theaterreview/site-plan.html
@@ -128,29 +128,120 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Welcome to my page! Here I hope to share the love that I have for 
+        musicals and plays and help you to develop your love for them as well!
+        I’ve grown up going to plays and listening to their soundtracks on any 
+        road trips with my family, so they’ve always been apart of my life. 
+        In more recent years however, I’ve been able to see one or two plays 
+        a month with my family. Theater has always been something I’ve loved, 
+        but experiencing it more thoroughly in my life has helped me grow to 
+        appreciate the work that goes into the productions and the storylines.
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="./images/Shakespeare Festival.jpg" alt="My family at the Shakespeare Festival">
+        <img src="./images/Megan and Me.jpg" alt="My sister and me at a play">
+        <img src="./images/Eccles.jpg" alt="Eccles in Salt Lake City">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Musical Synopses</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Dear Evan Hansen
+        "Dear Evan Hansen" is a Tony Award-winning Broadway musical that tells 
+        the story of a high school student named Evan Hansen who struggles with 
+        social anxiety and a desire to fit in. After the death of a classmate, 
+        Evan is mistaken as his best friend and becomes entangled in a web of lies 
+        that brings him closer to the boy's family and changes the course of 
+        his life. As Evan's popularity grows, he must navigate the consequences 
+        of his actions and confront the truth about his own identity and relationships. 
+        Through powerful music and heartfelt storytelling, "Dear Evan Hansen" explores 
+        themes of mental health, friendship, and the complexities of modern-day communication.
+
+        Hadestown
+        "Hadestown" is a Tony Award-winning Broadway musical that reimagines the myth of Orpheus 
+        and Eurydice as a post-apocalyptic love story. Set in the underworld of Greek mythology, 
+        the show follows Orpheus, a struggling musician, and Eurydice, a young woman who has lost 
+        her way. As they journey to the depths of Hadestown to seek a better life, they encounter 
+        the powerful ruler of the underworld, Hades, and his wife, Persephone. Through mesmerizing 
+        music and innovative staging, "Hadestown" explores themes of love, loss, and the struggle 
+        for hope in a world that often feels bleak. The show features a mix of jazz, blues, and 
+        folk music, as well as dynamic choreography and a talented cast that brings the story to 
+        life with passion and energy.
+
+        Wicked
+        "Wicked" is a beloved Broadway musical that reimagines the classic story of "The 
+        Wizard of Oz" from the perspective of the witches. The show follows the unlikely 
+        friendship between two witches, Glinda the Good and Elphaba the Wicked, as they 
+        navigate their way through school and the political turmoil of Oz. As they grow 
+        closer, they begin to uncover the truth behind the wizard's rule and the persecution 
+        of those with magical abilities. Through powerful music and witty storytelling, 
+        "Wicked" explores themes of friendship, love, and the struggle for acceptance in a 
+        world that values conformity.
+
+        The Band’s Visit
+        "The Band's Visit" is a Tony Award-winning Broadway musical that tells the story of 
+        an Egyptian police band that gets stranded in a small Israeli town. The band members 
+        are forced to spend the night in the town, and the locals take them in, offering food 
+        and shelter. As the night unfolds, both the band members and the townspeople learn about 
+        each other's cultures and connect through music and shared experiences. Through a mix 
+        of humor and heart, "The Band's Visit" explores themes of loneliness, connection, and 
+        the power of music to bring people together. The show features a beautiful score that 
+        blends traditional Middle Eastern music with contemporary Broadway influences, as well 
+        as a talented cast that brings the characters to life with warmth and depth.
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="./images/mail.png" alt="Icon for Dear Evan Hansen">
+        <img src="./images/rose.png" alt="Icon for Hadestown">
+        <img src="./images/magic-broom.png" alt="Icon for Wicked">
+        <img src="./images/trumpet.png" alt="Icon for The Band's Visit">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>My Reviews</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Dear Evan Hansen has been close to my heart ever since I first heard the music six years 
+        ago. This was a touching play that had everyone in my family in tears by the end. For 
+        me it was incredibly relatable as it deals with themes of loneliness and feeling like 
+        no one knows that you’re there, which are feelings everyone has sometime in their lives. 
+        The music powerfully portrays that “no one is alone” and that we all have some impact 
+        that we make in this world, no matter how big or small. The play has a lot of profanity 
+        and vulgarity, so it isn’t as high on my list as others, but I highly recommend giving 
+        the soundtrack a listen.
+
+        Hadestown was a surprising musical to me. I didn’t have much prior knowledge to seeing 
+        it, other than a loose understanding of the Greek mythology that the play features. 
+        Although not feeling attached to it before seeing this musical, I can say that I’m 
+        definitely attached afterwards. This has been added to soundtracks that I listen to on 
+        repeat because the music is so good and different than so many other musicals I’ve 
+        heard/seen. It’s a touching story with an ending that leaves you wanting more. This 
+        one is definitely worth the watch.
+
+        Wicked holds a very special place in my heart. I’ve grown up listening to the music 
+        and idealizing Idina Menzel who was casted as the main protagonist, Elphaba, in the 
+        original cast. This story is wonderful and intriguing in the ways that it fits into 
+        the original world of The Wizard of Oz. It’s a story that I never would have imagined 
+        coming from the world Dorothy found herself in. This play is heartwarming, and the 
+        music is endlessly catching, which is why it’s usually playing in my head, competing 
+        with whatever else I was listening to that day. I absolutely recommend this play to 
+        anyone, theater lovers or not.
+
+        The Band’s Visit was an interesting play. I had heard very little about it before I 
+        saw it, which actually fits well with the theme of the play. It opens with a message 
+        on a projector screen saying, “Once, not long ago, a group of musicians came to Israel 
+        from Egypt. You probably didn’t hear about it. It wasn’t very important.” This instantly 
+        grabbed my attention and made me excited for the play. This then went on to become one 
+        of my favorites of all time, although most of the people I’ve talked to thought it 
+        boring and dry. These are some of the reasons I loved it so much though. It was dry and 
+        sort of boring, but I think that was on purpose and represented how our lives feel 
+        sometimes. Either way, it was a wonderful play and I would highly recommend you see 
+        it as well to get your own opinion on it.
+
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="./images/Dear Evan Hansen Playbill.jpg" alt="Dear Evan Hansen">
+        <img src="./images/Hadestown Playbill.jpg" alt="Hadestown">
+        <img src="./images/Wicked.jpg" alt="Wicked">
+        <img src="./images/The Band's Visit Playbill.jpg" alt="The Band's Visit">
 
       </ul>
       <hr>
