added personal site plan link

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <a href="./wwr/site-plan-rafting.html">Go to Rafting Site Plan</a>
     <br> <br>
     <a href="./1-19-23/index.html">Go to HTML Practice</a>
+    <br> <br>
+    <a href="./theaterreview/site-plan.html">Go to Personal Site Site Plan</a>
 </body>
 </html>
