personal site wireframes

--- a/theaterreview/site-plan.html
+++ b/theaterreview/site-plan.html
@@ -255,19 +255,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="./images/Home Page Wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>Play Synopses</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="./images/Play Synopses Wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>My Reviews</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="./images/My Reviews Wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
