--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <br> <br>
     <a href="./1-19-23/index.html">Go to HTML Practice</a>
     <br> <br>
+    <a href="./theaterreview/index.html">Go to Personal Site</a>
+    <br> <br>
     <a href="./theaterreview/site-plan.html">Go to Personal Site Site Plan</a>
 </body>
 </html>
