--- a/theaterreview/index.html
+++ b/theaterreview/index.html
@@ -21,19 +21,20 @@
         </header>
 
         <section class="welcome-msg">
-            <p>Welcome to my page! Here I hope to share the love that I have for musicals and 
+            <h2>Welcome to my page!</h2>
+            <p>Here I hope to share the love that I have for musicals and 
                 plays and help you to develop your love for them as well! </p>
         </section>
 
         <main class="home-grid">
             <section class="home-img">
-                <img class="festival-img" src="./images/Shakespeare Festival.jpg" alt="Shakespeare Festival">
                 <img class="eccles-img" src="./images/Eccles.jpg" alt="Eccles picture">
+                <img class="festival-img" src="./images/Shakespeare Festival.jpg" alt="Shakespeare Festival">
                 <img class="sister-img" src="./images/Megan and Me.jpg" alt="Me and Megan">
             </section>
 
             <section class="intro-msg">
-                <h1>BACKGROUND</h1>
+                <h2>My Background</h2>
                 <p>I’ve grown up going to plays and listening to their soundtracks on any road trips 
                     with my family, so they’ve always been apart of my life. In more recent years 
                     however, I’ve been able to see one or two plays a month with my family. Theater 
