--- a/theaterreview/myreviews.html
+++ b/theaterreview/myreviews.html
@@ -82,6 +82,10 @@
                     highly recommend you see it as well to get your own opinion on it.</p>
                 <div id="text-background"></div>
             </section>
+
+            <section class="button">
+                <a href="./playsynopses.html" class="previous">&laquo; Play Synopses</a>
+            </section>
         </main>
 
         <footer>
