--- a/theaterreview/playsynopses.html
+++ b/theaterreview/playsynopses.html
@@ -90,6 +90,10 @@
                 <div id="vertical-background"></div>
                 <div id="horizontal-background"></div>
             </section>
+            
+            <section class="button">
+                <a href="./myreviews.html" class="next">My Reviews &raquo;</a>
+            </section>
         </main>
 
         <footer>
