--- a/theaterreview/playsynopses.html
+++ b/theaterreview/playsynopses.html
@@ -20,7 +20,7 @@
             </nav>
         </header>
 
-        <main class="page-grid">
+        <main class="home-grid">
             <section class="wicked-card">
                 <h1>Wicked</h1>
                 <img src="./images/magic-broom.png" alt="Wicked icon">
