--- a/theaterreview/myreviews.html
+++ b/theaterreview/myreviews.html
@@ -20,8 +20,8 @@
             </nav>
         </header>
 
-        <main class="home-grid">
-            <section class="wicked-card">
+        <main class="review-grid">
+            <section class="review-wicked-card">
                 <h1>Wicked</h1>
                 <img src="./images/Wicked.jpg" alt="Wicked picture">
                 <p>Wicked holds a very special place in my heart. I’ve grown up listening 
@@ -36,7 +36,7 @@
                 <div id="text-background"></div>
             </section>
 
-            <section class="hansen-card">
+            <section class="review-hansen-card">
                 <h1>Dear Evan Hansen</h1>
                 <img src="./images/Dear Evan Hansen Playbill.jpg" alt="Dear Evan Hansen Playbill">
                 <p>Dear Evan Hansen has been close to my heart ever since I first heard 
@@ -52,7 +52,7 @@
                 <div id="text-background"></div>
             </section>
 
-            <section class="hadestown-card">
+            <section class="review-hadestown-card">
                 <h1>Hadestown</h1>
                 <img src="./images/Hadestown Playbill.jpg" alt="Hadestown Playbill">
                 <p>Hadestown was a surprising musical to me. I didn’t have much prior knowledge 
@@ -66,7 +66,7 @@
                 <div id="text-background"></div>
             </section>
 
-            <section class="band-visit-card">
+            <section class="review-band-visit-card">
                 <h1>The Band's Visit</h1>
                 <img src="./images/The Band's Visit Playbill.jpg" alt="The Band's Visit Playbill">
                 <p>The Band’s Visit was an interesting play. I had heard very little about 
